--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "!**/__tests__",
     "!**/__fixtures__",
     "!**/__mocks__",
-    "!**/.*"
+    "!**/.*",
+    "!src/components/**/*.test.tsx"
   ],
   "scripts": {
     "app": "yarn workspace app",
